building funcs and connection ot module

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -40,7 +40,9 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler # mean = 0 vairance =1\n",
     "from sklearn.decomposition import PCA\n",
-    "from HPLC_module import *  # must be in the same directory\n",
+    "# from HPLC_module import *  # must be in the same directory\n",
+    "from HPLC_MODULE_NOTEBOOK import *\n",
+    "\n",
     "path = os.getcwd() + '/TCB2_data_APRIL23.csv'  # TCB2 #using current working directory plus file name \n",
     "col_names = ['mouse_id' , 'treatment' , 'BR' , 'compound' , 'ng_mg']"
    ]
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
        "[15989 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +372,7 @@
        "[15989 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +397,7 @@
     "\n",
     "#merge with df\n",
     "restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\n",
-    "restructured_df"
+    "restructured_df\n"
    ]
   },
   {
@@ -403,7 +405,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#exclusion of outliers Grubbs test "
+   ]
   }
  ],
  "metadata": {
