--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -34,18 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler # mean = 0 vairance =1\n",
     "from sklearn.decomposition import PCA\n",
-    "# from HPLC_module import *  # must be in the same directory\n",
-    "from HPLC_MODULE_NOTEBOOK import *\n",
+    "from HPLC_module import *  # must be in the same directory\n",
+    "import os\n",
+    "from HPLC_MODULE_NOTEBOOK import applyMappingToColumn #Must be reimported when changes made to module file\n",
     "\n",
-    "path = os.getcwd() + '/TCB2_data_APRIL23.csv'  # TCB2 #using current working directory plus file name \n",
+    "path = os.getcwd() + '/input/TCB2_data_APRIL23.csv'  # TCB2 #using current working directory plus file name \n",
     "col_names = ['mouse_id' , 'treatment' , 'BR' , 'compound' , 'ng_mg']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +205,7 @@
        "[15989 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,151 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mouse_id</th>\n",
-       "      <th>treatment</th>\n",
-       "      <th>BR</th>\n",
-       "      <th>compound</th>\n",
-       "      <th>ng_mg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
-       "      <td>0.038630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>0.163797</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.004028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>5HTP</td>\n",
-       "      <td>0.007148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>DOPAC</td>\n",
-       "      <td>0.018343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15984</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>DOPAC</td>\n",
-       "      <td>0.029512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15985</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>0.026709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15986</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HIAA</td>\n",
-       "      <td>0.074892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15987</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>HVA</td>\n",
-       "      <td>0.035113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15988</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>0.109190</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>15989 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       mouse_id   treatment  BR compound     ng_mg\n",
-       "0           2.0    vehicles  OF    LDOPA  0.038630\n",
-       "1           2.0    vehicles  OF       NA  0.163797\n",
-       "2           2.0    vehicles  OF        A  0.004028\n",
-       "3           2.0    vehicles  OF     5HTP  0.007148\n",
-       "4           2.0    vehicles  OF    DOPAC  0.018343\n",
-       "...         ...         ...  ..      ...       ...\n",
-       "15984      70.0  10mg/kgTCB  CE    DOPAC  0.029512\n",
-       "15985      70.0  10mg/kgTCB  CE       DA  0.026709\n",
-       "15986      70.0  10mg/kgTCB  CE    5HIAA  0.074892\n",
-       "15987      70.0  10mg/kgTCB  CE      HVA  0.035113\n",
-       "15988      70.0  10mg/kgTCB  CE      5HT  0.109190\n",
-       "\n",
-       "[15989 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "cannot convert the series to <class 'int'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 19\u001b[0m\n\u001b[1;32m     11\u001b[0m palette_labeled \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mvehicles\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mwhite\u001b[39m\u001b[39m\"\u001b[39m,  \u001b[39m# TCB2\u001b[39;00m\n\u001b[1;32m     12\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m10mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mfirebrick\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     13\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m3mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mred\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     14\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m0.3mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msalmon\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     15\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39mTCB+MDL\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mgrey\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     16\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m0.2mg/kgMDL\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mblack\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m     18\u001b[0m \u001b[39m#merge with df\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m restructured_df \u001b[39m=\u001b[39m applyMappingToColumn(restructured_df, \u001b[39m'\u001b[39;49m\u001b[39mtreatment\u001b[39;49m\u001b[39m'\u001b[39;49m, treatment_dict )\n\u001b[1;32m     21\u001b[0m \u001b[39m# restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\u001b[39;00m\n\u001b[1;32m     22\u001b[0m restructured_df\n",
+      "File \u001b[0;32m~/Desktop/phd/HPLC_MODULE_NOTEBOOK.py:6\u001b[0m, in \u001b[0;36mapplyMappingToColumn\u001b[0;34m(df, column, mapping)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapplyMappingToColumn\u001b[39m(df, column, mapping):\n\u001b[0;32m----> 6\u001b[0m     df[column] \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(df[column])\n\u001b[1;32m      7\u001b[0m     df[column] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mapply( \u001b[39mlambda\u001b[39;00m x: mapping[x[column]], axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m df\n",
+      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/series.py:230\u001b[0m, in \u001b[0;36m_coerce_method.<locals>.wrapper\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    222\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    223\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCalling \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m on a single element Series is \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    224\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdeprecated and will raise a TypeError in the future. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    227\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[1;32m    228\u001b[0m     )\n\u001b[1;32m    229\u001b[0m     \u001b[39mreturn\u001b[39;00m converter(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m])\n\u001b[0;32m--> 230\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcannot convert the series to \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot convert the series to <class 'int'>"
+     ]
     }
    ],
    "source": [
@@ -396,7 +272,9 @@
     "                   '0.2mg/kgMDL': \"black\"}\n",
     "\n",
     "#merge with df\n",
-    "restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\n",
+    "restructured_df = applyMappingToColumn(restructured_df, 'treatment', treatment_dict )\n",
+    "\n",
+    "# restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\n",
     "restructured_df\n"
    ]
   },
@@ -407,6 +285,24 @@
    "outputs": [],
    "source": [
     "#exclusion of outliers Grubbs test "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#generate mean, sd and sem table "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#statistical testing\n",
+    "#remi: here i need to build in flexable structure"
    ]
   }
  ],
