building out structure with notes 4 remi

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mouse_id     float64\n",
+       "treatment    float64\n",
+       "BR            object\n",
+       "compound      object\n",
+       "ng_mg        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_raw = pd.read_csv(path, header=0)\n",
+    "df = df_raw.copy() #cworking df \n",
+    "df = df.replace(np.nan, 0) # to set all 0 to Nan\n",
+    "\n",
+    "raw_col_names = df_raw.columns.copy()\n",
+    "result_rows = []\n",
+    "\n",
+    "for ind, row in df_raw.iterrows(): #loop for row get mouse and group\n",
+    "    \n",
+    "    mouse_id = row[0]\n",
+    "    treatment = row[1]\n",
+    "\n",
+    "    for val, col_name in zip(row[2:], raw_col_names[2:]): #loop within row\n",
+    "\n",
+    "        if val > 0:\n",
+    "            compound, BR = col_name.split('_')\n",
+    "            result_rows.append([mouse_id, treatment, BR, compound, val])\n",
+    "\n",
+    "restructured_df = pd.DataFrame(result_rows, columns=col_names)\n",
+    "restructured_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mouse_id     float64\n",
+       "treatment    float64\n",
+       "BR            object\n",
+       "compound      object\n",
+       "ng_mg        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restructured_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +168,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
        "      <td>LDOPA</td>\n",
        "      <td>0.038630</td>\n",
@@ -106,7 +176,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
        "      <td>NA</td>\n",
        "      <td>0.163797</td>\n",
@@ -114,7 +184,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
        "      <td>A</td>\n",
        "      <td>0.004028</td>\n",
@@ -122,7 +192,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
        "      <td>5HTP</td>\n",
        "      <td>0.007148</td>\n",
@@ -130,7 +200,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
        "      <td>DOPAC</td>\n",
        "      <td>0.018343</td>\n",
@@ -146,7 +216,7 @@
        "    <tr>\n",
        "      <th>15984</th>\n",
        "      <td>70.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
        "      <td>DOPAC</td>\n",
        "      <td>0.029512</td>\n",
@@ -154,7 +224,7 @@
        "    <tr>\n",
        "      <th>15985</th>\n",
        "      <td>70.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
        "      <td>DA</td>\n",
        "      <td>0.026709</td>\n",
@@ -162,7 +232,7 @@
        "    <tr>\n",
        "      <th>15986</th>\n",
        "      <td>70.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
        "      <td>5HIAA</td>\n",
        "      <td>0.074892</td>\n",
@@ -170,7 +240,7 @@
        "    <tr>\n",
        "      <th>15987</th>\n",
        "      <td>70.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
        "      <td>HVA</td>\n",
        "      <td>0.035113</td>\n",
@@ -178,7 +248,7 @@
        "    <tr>\n",
        "      <th>15988</th>\n",
        "      <td>70.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
        "      <td>5HT</td>\n",
        "      <td>0.109190</td>\n",
@@ -189,68 +259,25 @@
        "</div>"
       ],
       "text/plain": [
-       "       mouse_id  treatment  BR compound     ng_mg\n",
-       "0           2.0        1.0  OF    LDOPA  0.038630\n",
-       "1           2.0        1.0  OF       NA  0.163797\n",
-       "2           2.0        1.0  OF        A  0.004028\n",
-       "3           2.0        1.0  OF     5HTP  0.007148\n",
-       "4           2.0        1.0  OF    DOPAC  0.018343\n",
-       "...         ...        ...  ..      ...       ...\n",
-       "15984      70.0        2.0  CE    DOPAC  0.029512\n",
-       "15985      70.0        2.0  CE       DA  0.026709\n",
-       "15986      70.0        2.0  CE    5HIAA  0.074892\n",
-       "15987      70.0        2.0  CE      HVA  0.035113\n",
-       "15988      70.0        2.0  CE      5HT  0.109190\n",
+       "       mouse_id   treatment  BR compound     ng_mg\n",
+       "0           2.0    vehicles  OF    LDOPA  0.038630\n",
+       "1           2.0    vehicles  OF       NA  0.163797\n",
+       "2           2.0    vehicles  OF        A  0.004028\n",
+       "3           2.0    vehicles  OF     5HTP  0.007148\n",
+       "4           2.0    vehicles  OF    DOPAC  0.018343\n",
+       "...         ...         ...  ..      ...       ...\n",
+       "15984      70.0  10mg/kgTCB  CE    DOPAC  0.029512\n",
+       "15985      70.0  10mg/kgTCB  CE       DA  0.026709\n",
+       "15986      70.0  10mg/kgTCB  CE    5HIAA  0.074892\n",
+       "15987      70.0  10mg/kgTCB  CE      HVA  0.035113\n",
+       "15988      70.0  10mg/kgTCB  CE      5HT  0.109190\n",
        "\n",
        "[15989 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "df_raw = pd.read_csv(path, header=0)\n",
-    "df = df_raw.copy() #cworking df \n",
-    "df = df.replace(np.nan, 0) # to set all 0 to Nan\n",
-    "\n",
-    "raw_col_names = df_raw.columns.copy()\n",
-    "result_rows = []\n",
-    "\n",
-    "for ind, row in df_raw.iterrows(): #loop for row get mouse and group\n",
-    "    \n",
-    "    mouse_id = row[0]\n",
-    "    treatment = row[1]\n",
-    "\n",
-    "    for val, col_name in zip(row[2:], raw_col_names[2:]): #loop within row\n",
-    "\n",
-    "        if val > 0:\n",
-    "            compound, BR = col_name.split('_')\n",
-    "            result_rows.append([mouse_id, treatment, BR, compound, val])\n",
-    "\n",
-    "restructured_df = pd.DataFrame(result_rows, columns=col_names)\n",
-    "restructured_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot convert the series to <class 'int'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 19\u001b[0m\n\u001b[1;32m     11\u001b[0m palette_labeled \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mvehicles\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mwhite\u001b[39m\u001b[39m\"\u001b[39m,  \u001b[39m# TCB2\u001b[39;00m\n\u001b[1;32m     12\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m10mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mfirebrick\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     13\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m3mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mred\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     14\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m0.3mg/kgTCB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msalmon\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     15\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39mTCB+MDL\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mgrey\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     16\u001b[0m                    \u001b[39m'\u001b[39m\u001b[39m0.2mg/kgMDL\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mblack\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m     18\u001b[0m \u001b[39m#merge with df\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m restructured_df \u001b[39m=\u001b[39m applyMappingToColumn(restructured_df, \u001b[39m'\u001b[39;49m\u001b[39mtreatment\u001b[39;49m\u001b[39m'\u001b[39;49m, treatment_dict )\n\u001b[1;32m     21\u001b[0m \u001b[39m# restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\u001b[39;00m\n\u001b[1;32m     22\u001b[0m restructured_df\n",
-      "File \u001b[0;32m~/Desktop/phd/HPLC_MODULE_NOTEBOOK.py:6\u001b[0m, in \u001b[0;36mapplyMappingToColumn\u001b[0;34m(df, column, mapping)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapplyMappingToColumn\u001b[39m(df, column, mapping):\n\u001b[0;32m----> 6\u001b[0m     df[column] \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(df[column])\n\u001b[1;32m      7\u001b[0m     df[column] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mapply( \u001b[39mlambda\u001b[39;00m x: mapping[x[column]], axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m df\n",
-      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/series.py:230\u001b[0m, in \u001b[0;36m_coerce_method.<locals>.wrapper\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    222\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    223\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCalling \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m on a single element Series is \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    224\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdeprecated and will raise a TypeError in the future. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    227\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[1;32m    228\u001b[0m     )\n\u001b[1;32m    229\u001b[0m     \u001b[39mreturn\u001b[39;00m converter(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m])\n\u001b[0;32m--> 230\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcannot convert the series to \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot convert the series to <class 'int'>"
-     ]
     }
    ],
    "source": [
@@ -271,11 +298,11 @@
     "                   'TCB+MDL': \"grey\",\n",
     "                   '0.2mg/kgMDL': \"black\"}\n",
     "\n",
-    "#merge with df\n",
+    "#intergrate \n",
     "restructured_df = applyMappingToColumn(restructured_df, 'treatment', treatment_dict )\n",
     "\n",
-    "# restructured_df['treatment'] = restructured_df.apply( lambda x: treatment_dict[int(x['treatment'])], axis = 1)\n",
-    "restructured_df\n"
+    "restructured_df\n",
+    "\n"
    ]
   },
   {
@@ -284,7 +311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exclusion of outliers Grubbs test "
+    "#exclusion of outliers Grubbs test \n",
+    "#create ratios first as if there is a systematic error for a BR (run together) the ratio may still be good and there deserved to have a grubbs test for its own \n",
+    "#treatment, compound, BR"
    ]
   },
   {
@@ -292,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#generate mean, sd and sem table "
+    "#generate mean, sd and sem table for each 'data set' i.e. treatment, BR, compound"
    ]
   },
   {
@@ -302,7 +331,14 @@
    "outputs": [],
    "source": [
     "#statistical testing\n",
-    "#remi: here i need to build in flexable structure"
+    "#remi: here i need to build in flexable stats structure\n",
+    "\n",
+    "#dose responce data (single factor) --> one way ANOVA --> post hoc Tukey \n",
+    "#agonist antagonist data (multifactor pathway) --> two way ANOVA --> one way ANOVA --> post hoc Tukey\n",
+    "\n",
+    "\n",
+    "\n",
+    "#histograms with stats plotted (idealy chosing the level of stats i.e. significance in two way ANOVA or only if it passes all?)"
    ]
   }
  ],
